<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">스마트 앱팅!!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="send">보내기</string>
    <string name="clear">삭제</string>

    <string name="bodytype1">마른</string>
    <string name="bodytype2">보통</string>
    <string name="bodytype3">약간살찐</string>
    <string name="bodytype4">뚱뚱한</string>
    <string name="bodytype5">건장한</string>
    <string name="bodytype6">근육질</string>

    <string name="character1">지적인</string>
    <string name="character2">차분한</string>
    <string name="character3">개그감있는</string>
    <string name="character4">낙천적인</string>
    <string name="character5">감성적인</string>
    <string name="character6">내성적인</string>
    <string name="character7">외향적인</string>
    <string name="character8">친절한</string>
    <string name="character9">낯을가리는</string>
    <string name="character10">개성있는</string>
    <string name="character11">냉철한</string>
    <string name="character12">친화력있는</string>

    <string name="job1">경영.사무</string>
    <string name="job2">영업.고객상담</string>
    <string name="job3">IT.인터넷</string>
    <string name="job4">디자인</string>
    <string name="job5">전문직</string>
    <string name="job6">의료</string>
    <string name="job7">생산.제조</string>
    <string name="job8">건설</string>
    <string name="job9">미디어</string>
    <string name="job10">유통.무역</string>
    <string name="job11">교육</string>
    <string name="job12">공무원</string>
    <string name="job13">군인.경찰</string>
    <string name="job14">운동.스포츠</string>
    <string name="job15">문화.예술.종교</string>
    <string name="job16">기타</string>

    <string name="hobby1">음악.영화감상</string>
    <string name="hobby2">독서.공부</string>
    <string name="hobby3">운동.스포츠</string>
    <string name="hobby4">문화관람</string>
    <string name="hobby5">공예.DIY</string>
    <string name="hobby6">여행</string>
    <string name="hobby7">낚시</string>
    <string name="hobby8">드라이브</string>
    <string name="hobby9">사진찍기</string>
    <string name="hobby10">요리</string>
    <string name="hobby11">수다떨기</string>
    <string name="hobby12">TV.인터넷</string>
    <string name="hobby13">게임</string>
    <string name="hobby14">댄스.노래.악기연주</string>
    <string name="hobby15">봉사활동</string>
    <string name="hobby16">기타</string>

    <string name="nickname">닉네임</string>
    <string name="address">지역</string>
    <string name="job">직업.분야</string>
    <string name="hobby">취미</string>
    <string name="character">성격</string>
    <string name="bloodType">혈액형</string>
    <string name="religion">종교</string>
    <string name="height">신장</string>
    <string name="bodyType">체형</string>
</resources>
