<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="vertical">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/hobby1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby1"
            android:textOff="@string/hobby1"
            android:textOn="@string/hobby1"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/hobby2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby2"
            android:textOff="@string/hobby2"
            android:textOn="@string/hobby2"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/hobby3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby3"
            android:textOff="@string/hobby3"
            android:textOn="@string/hobby3"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/hobby4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby4"
            android:textOff="@string/hobby4"
            android:textOn="@string/hobby4"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/hobby5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby5"
            android:textOff="@string/hobby5"
            android:textOn="@string/hobby5"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/hobby6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby6"
            android:textOff="@string/hobby6"
            android:textOn="@string/hobby6"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/hobby7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby7"
            android:textOff="@string/hobby7"
            android:textOn="@string/hobby7"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/hobby8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby8"
            android:textOff="@string/hobby8"
            android:textOn="@string/hobby8"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/hobby9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby9"
            android:textOff="@string/hobby9"
            android:textOn="@string/hobby9"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/hobby10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby10"
            android:textOff="@string/hobby10"
            android:textOn="@string/hobby10"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/hobby11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby11"
            android:textOff="@string/hobby11"
            android:textOn="@string/hobby11"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/hobby12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby12"
            android:textOff="@string/hobby12"
            android:textOn="@string/hobby12"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/hobby13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby13"
            android:textOff="@string/hobby13"
            android:textOn="@string/hobby13"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/hobby14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby14"
            android:textOff="@string/hobby14"
            android:textOn="@string/hobby14"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/hobby15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby15"
            android:textOff="@string/hobby15"
            android:textOn="@string/hobby15"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/hobby16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hobby16"
            android:textOff="@string/hobby16"
            android:textOn="@string/hobby16"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>