<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="vertical">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/character1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character1"
            android:textOff="@string/character1"
            android:textOn="@string/character1"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/character2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character2"
            android:textOff="@string/character2"
            android:textOn="@string/character2"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/character3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character3"
            android:textOff="@string/character3"
            android:textOn="@string/character3"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/character4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character4"
            android:textOff="@string/character4"
            android:textOn="@string/character4"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/character5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character5"
            android:textOff="@string/character5"
            android:textOn="@string/character5"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/character6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character6"
            android:textOff="@string/character6"
            android:textOn="@string/character6"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/character7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character7"
            android:textOff="@string/character7"
            android:textOn="@string/character7"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/character8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character8"
            android:textOff="@string/character8"
            android:textOn="@string/character8"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/character9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character9"
            android:textOff="@string/character9"
            android:textOn="@string/character9"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/character10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character10"
            android:textOff="@string/character10"
            android:textOn="@string/character10"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <ToggleButton
            android:id="@+id/character11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character11"
            android:textOff="@string/character11"
            android:textOn="@string/character11"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/character12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/character12"
            android:textOff="@string/character12"
            android:textOn="@string/character12"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>